--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -17,13 +17,7 @@ jobs:
         node-version: '18'
 
     - name: Install Dependencies
-      run: npm install
+      run: npm ci
 
     - name: Lint
       run: npm run lint
-
-    - name: Build
-      run: npm run build -- --prod
-
-    - name: Run Tests
-      run: npm test
